# equinox

./: .gitignore  AGENTS.md  README.md  TODO.md  check_exports.ts  error.txt  exelist.txt  firm.md  index.html  installer-arm64.iss  installer-x64.iss  latest.json  list.txt  package.json  tailwind.config.js  vite.config.ts
documentation/: CLEANUP_LOG.md  (+3 more)
src-tauri/: AGENTS.md  Cargo.toml  build_log.txt  supabase_schema.sql  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/keys/: private.key  private.key.old  private.key.pub  private_decoded.key  updater.pub
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  cash_register.rs  categories.rs  clients.rs  discounts.rs  invoices.rs  lots.rs  mod.rs  payments.rs  price_history.rs  price_lists.rs  product_types.rs  products.rs  security.rs  settings.rs  setup.rs  sync.rs  system.rs  units.rs  updater.rs  variants.rs
src-tauri/src/db/: manager.rs  migrations.rs  mod.rs
src-tauri/src/db/migrations/: 002_billing_settings.sql  003_price_lists_discounts.sql  004_billing_invoices.sql  005_add_bank_account_to_payments.sql  006_add_received_amount.sql  007_cash_registers.sql
src-tauri/src/models/: bank_account.rs  cash_register.rs  category.rs  client.rs  company_settings.rs  discount.rs  installation.rs  invoice.rs  lot.rs  mod.rs  payment.rs  price_history.rs  price_list.rs  product.rs  product_type.rs  sync.rs  tax_setting.rs  unit.rs  variant.rs
src-tauri/src/security/: audit.rs  hardware_lock.rs  mod.rs  secure_chain.rs  time_guard.rs
src-tauri/src/services/: cash_register.rs  mod.rs  pdf_generator.rs  sync.rs  tax_calculator.rs
(+124 files in other folders)
